<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="hideSoftInputWindow"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#3284b6" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#3284b6"
            android:contentDescription="@string/chat_connect"
            android:scaleType="fitCenter"
            android:src="@drawable/title_from" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/chat_nomember"
            android:textColor="#555"
            android:textSize="21sp" />

        <Button
            android:id="@+id/connentGuestBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_darkgray2"
            android:onClick="btnGuestClick"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/chat_guest"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="#eee"
            android:onClick="hideSoftInputWindow"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/chat_member"
                android:textColor="#555"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/chatFrom"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfield_white"
                android:hint="@string/chat_id_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:scrollHorizontally="true"
                android:textColor="#3284b6"
                android:textColorHint="#999" >
            </EditText>

            <EditText
                android:id="@+id/chatPwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfield_white"
                android:hint="@string/chat_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:scrollHorizontally="true"
                android:textColor="#3284b6"
                android:textColorHint="#999" >
            </EditText>

            <Button
                android:id="@+id/connentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_blue2"
                android:onClick="btnClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/chat_connect"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="findIdClick"
                android:text="@string/chat_find_id"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="#000"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="joinBtnClick"
                android:text="@string/chat_join"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>