<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:onClick="hideSoftInputWindow"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3182b5"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnReturnRoom"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chat_return"
            android:onClick="goBack"
            android:scaleType="fitXY"
            android:src="@drawable/btn_chat_prev" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/chat_vote_add"
            android:textColor="#fff"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnAddVote"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chat_return"
            android:onClick="addVoteDone"
            android:scaleType="fitXY"
            android:src="@drawable/btn_confirm" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:onClick="hideSoftInputWindow"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/subjectEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chat_enter_subject"
                android:inputType="textNoSuggestions"
                android:padding="10dp"
                android:scrollHorizontally="true"
                android:textColor="#000"
                android:text="@string/vote_default_subject"
                android:textColorHint="#999" >
            </EditText>

            <LinearLayout
                android:id="@+id/createAnswerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnAddAnswer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chat_return"
                android:onClick="addAnswer"
                android:scaleType="fitXY"
                android:src="@drawable/btn_more" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>