<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="hideSoftInputWindow"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#3284b6" >

            <Button
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:adjustViewBounds="true"
                android:background="@drawable/btn_prev"
                android:contentDescription="@string/chat_connect"
                android:onClick="goBack"
                android:scaleType="fitStart" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/chat_find_id"
            android:scaleType="fitCenter"
            android:background="#3284b6"
            android:src="@drawable/title_find_user" />

        <EditText
            android:id="@+id/chatEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textfield_white"
            android:hint="@string/chat_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scrollHorizontally="true"
            android:textColor="#3284b6"
            android:textColorHint="#999" >
        </EditText>

        <Button
            android:id="@+id/connentBtn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_blue"
            android:onClick="btnClick"
            android:text="@string/chat_find_id"
            android:textColor="#fff"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chatMatchingId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scrollHorizontally="true"
            android:text=""
            android:textColor="#3284b6"
            android:textSize="18sp" >
        </TextView>
    </LinearLayout>

</ScrollView>